--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ charset-normalizer==3.1.0
 click==8.1.7
 cloudinary==1.32.0
 cloudpathlib==0.16.0
+Flask==3.0.0
 confection==0.1.4
 cryptography==41.0.7
 cymem==2.0.8
